@@ -1,1 +1,0 @@
-DIST zsh-completion-20140716.tar.gz 212725 SHA256 1c1d86e1f39adf00a7bfb7e64e8188c461ece10789b428d43f710b1f9245d690 SHA512 42ada76f0856ec357b0ffb48744aa278833387164845918a9b3360398ca39a54996dfd8f035a87ec0066fff307ed3e54a412cb5d4c5b108258f8a6be9650c4d4 WHIRLPOOL 61830f52f720913a96878f307429611fd7dcc045e5e3dcca6330d8e99eb476a2a586d3c9ed58246bbbea391da85633b22bd80ecadf8d0bae656f1a41af012760
