@@ -1,0 +1,1 @@
+DIST zsh-completions-0.12.0.tar.gz 193410 SHA256 770d92749b11b22192595b207208508f8bfa319d5d03210a71bc44c8b9cfa0d5 SHA512 3c6b19f10d9598f40cf37ca5c5828e5652b0cad144d48ca681f5a16c1921c308f8cd3d9b8a2dd1c50ddbf167d4bb2e2e5299d1e30591971f4c7d9b28c2250feb WHIRLPOOL 7c5a1cb45d2e045fb0f8eb64deb8d87cab506f11b94996b9ff6cb169fd20672040bdc624de78a58ab5908d2222130de93a179a8e00d5aa75365af0ab0566852a
