@@ -14,7 +14,6 @@
 	</upstream>
 	<use>
 		<flag name="completion_Android">Install zsh completions for Android-related programs</flag>
-		<flag name="completion_Gentoo">Install zsh completions for Gentoo and portage</flag>
 		<flag name="completion_Google">Install zsh completions for googlecl</flag>
 		<flag name="completion_Unix">Install zsh completion for unix system tools</flag>
 		<flag name="completion_database">Install zsh completions for database programs</flag>
