@@ -1,1 +1,1 @@
-DIST zsh-syntax-highlighting-0.2.0.tar.gz 11911 SHA256 5b31d98248f61a55572ae9ddf95ca105109fcb922680bc05cd76e21151c113ce SHA512 8886af4474db025ad2343df7dcca0ff09b37a4115e2f4905947dd6652e3394ab40b9e2493bdc6f075ac0a9cc8ac0414d2d2be2295382034d6d79846675e8469b WHIRLPOOL fde8963943a2ebeec38cdfb4a51b18a15853618abe4d97a9efe42eff6016915c3862ee0b850c2a04122fc06f8e4c514b43911a040c507d978663f4763b2ec375
+DIST zsh-syntax-highlighting-0.2.1.tar.gz 12400 SHA256 3cdf47ee613ff748230e9666c0122eca22dc05352f266fe640019c982f3ef6db SHA512 40b04f45035081858d14d8044659db3e96e881e387c91564ff58314972207a47145f13ecdb604c0a7a5683c0a922811c4ee36e3d18558c6126db24b5da2d862c WHIRLPOOL 7707bd843d77bf53bd2aef4260a683fe8de6fb0529d9c58e7780b43131eda4541054165c3cd5e69f8d04721d2264a60233f4efda6958af819d1345e19dc715bb
